chore: Add keyboards.csv to fv_all.kmp
* Streamline columns to ID, Region
* Override name and language info for basic_kbdcan and sil_euro_latin

--- a/release/packages/fv_all/source/fv_all.kps.in
+++ b/release/packages/fv_all/source/fv_all.kps.in
@@ -18,7 +18,7 @@
     <Copyright URL="">(c) 2015-2024 FirstVoices, SIL International, 2015 First Peoples' Cultural Foundation</Copyright>
     <WebSite URL="https://www.firstvoices.com">https://www.firstvoices.com</WebSite>
     <Name URL="">First Voices Keyboards</Name>
-    <Version URL="">12.9</Version>
+    <Version URL="">12.10</Version>
   </Info>
   <Files>
     <File>
@@ -26,6 +26,12 @@
       <Description>File readme.htm</Description>
       <CopyLocation>0</CopyLocation>
       <FileType>.htm</FileType>
+    </File>
+    <File>
+      <Name>..\keyboards.csv</Name>
+      <Description>File keyboards.csv</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.csv</FileType>
     </File>
     <File>
       <Name>..\..\..\shared\fonts\canadian_aboriginal\AboriginalSansBOLD.ttf</Name>
