--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/keymanapp/keyboards#readme",
   "dependencies": {
-    "@keymanapp/kmc": "17.0.318-beta"
+    "@keymanapp/kmc": "17.0.325"
   }
 }
