small changes to rules and layout

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ servervars.sh
 /tools/kmcomp.exe
 /tools/kmcomp.x64.exe
 /tools/kmconvert.exe
+release/fv/fv_ojibwa_rightdot/fv_ojibwa_rightdot.kpj
