--- a/release/packages/fv_all/source/fv_all.kps.in
+++ b/release/packages/fv_all/source/fv_all.kps.in
@@ -19,7 +19,7 @@
     <Copyright URL="">(c) 2015-2024 FirstVoices, SIL International, 2015 First Peoples' Cultural Foundation</Copyright>
     <WebSite URL="https://www.firstvoices.com">https://www.firstvoices.com</WebSite>
     <Name URL="">First Voices Keyboards</Name>
-    <Version URL="">12.13</Version>
+    <Version URL="">12.14</Version>
     <Description>This package includes FirstVoices keyboards for Windows, Android, and iOS. It is distributed as part of the FirstVoices project</Description>
   </Info>
   <Files>
@@ -74,6 +74,12 @@
     <File>
       <Name>..\..\..\shared\fonts\canadian_aboriginal\AboriginalSerifREGULAR.ttf</Name>
       <Description>Font Aboriginal Serif</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-Regular.ttf</Name>
+      <Description>Font BC Sans Regular</Description>
       <CopyLocation>0</CopyLocation>
       <FileType>.ttf</FileType>
     </File>
