[fv_all] Add bold and italics BC Sans

--- a/release/packages/fv_all/source/fv_all.kps.in
+++ b/release/packages/fv_all/source/fv_all.kps.in
@@ -78,6 +78,36 @@
       <FileType>.ttf</FileType>
     </File>
     <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-Bold.ttf</Name>
+      <Description>Font BC Sans Bold</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-BoldItalic.ttf</Name>
+      <Description>Font BC Sans Bold Italic</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-Italic.ttf</Name>
+      <Description>Font BC Sans Italic</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-Light.ttf</Name>
+      <Description>Font BC Sans Light</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\bcsans\BCSans-LightItalic.ttf</Name>
+      <Description>Font BC Sans Light Italic</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.ttf</FileType>
+    </File>   
+    <File>
       <Name>..\..\..\shared\fonts\bcsans\BCSans-Regular.ttf</Name>
       <Description>Font BC Sans Regular</Description>
       <CopyLocation>0</CopyLocation>
