Changed font location, removed DS_Store file

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ build_targets.txt
 build_external_targets.txt
 build_fv_all.txt
 build_legacy.txt
+release/fv/fv_hailzaqvla/.DS_Store
+release/fv/.DS_Store
+release/.DS_Store
