consolidated .DS_Store files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,7 @@ experimental/*/*/build/
 packages/*/build/
 .cache
 servervars.sh
-release/fv/fv_hailzaqvla/.DS_Store
-release/fv/.DS_Store
-release/.DS_Store
+.DS_Store
 /.project
 .vscode/
 node_modules/
