[fv_all]: Add NotoHeiltsuk font and code points for fv_hailzaqvla

--- a/release/packages/fv_all/source/fv_all.kps.in
+++ b/release/packages/fv_all/source/fv_all.kps.in
@@ -19,7 +19,7 @@
     <Copyright URL="">(c) 2015-2024 FirstVoices, SIL International, 2015 First Peoples' Cultural Foundation</Copyright>
     <WebSite URL="https://www.firstvoices.com">https://www.firstvoices.com</WebSite>
     <Name URL="">First Voices Keyboards</Name>
-    <Version URL="">13.0</Version>
+    <Version URL="">13.1</Version>
     <Description>This package includes FirstVoices keyboards for Windows, Android, and iOS. It is distributed as part of the FirstVoices project</Description>
   </Info>
   <Files>
@@ -118,6 +118,12 @@
       <Description>DejaVu SansFont</Description>
       <CopyLocation>0</CopyLocation>
       <FileType>.ttf</FileType>
+    </File>
+    <File>
+      <Name>..\..\..\shared\fonts\noto\Latn\heiltsuk\NotoHeiltsukSans-Regular.otf</Name>
+      <Description>NotoHeiltsuk SansFont</Description>
+      <CopyLocation>0</CopyLocation>
+      <FileType>.otf</FileType>
     </File>
     <File>
       <Name>..\LICENSE.md</Name>
